# scrummy

./: .gitignore  Cargo.toml  README.md
services/organization-command-service/: Cargo.toml
services/organization-command-service/src/: create_organization_payload.rs  main.rs  organization_aggregate.rs  organization_event.rs
services/shared/: Cargo.toml
services/shared/src/: aggregate.rs  aggregate_factory.rs  api_key.rs  event.rs  event_store.rs  lib.rs  mongo_event_store.rs
services/shared/src/error/: error.rs  error_type.rs  mod.rs
services/team-command-service/: Cargo.toml
services/user-command-service/: Cargo.toml
