[package]
name = "organization-command-service"
version = "1.0.0"
workspace = "../../"


[dependencies]
rocket = "0.3.15"
rocket_contrib = "0.3.15"
rocket_codegen = "0.3.15"
juniper = "0.9.0"
bson = "0.12.2"
mongodb = "0.3.10"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4.4"
simplelog = "0.5.2"
shared = { path = "../shared" }
